fix z-index

--- a/styles/style.css
+++ b/styles/style.css
@@ -1,7 +1,3 @@
-div {
-	border: 2px solid red;
-}
-
 .page {
 	font-family: 'Helvetica Neue', 'Arial', sans-serif;
 	min-width: 1100px;
@@ -22,6 +18,7 @@ div {
 	max-height: 756px;
 	display: flex;
 	position: relative;
+	overflow: hidden;
 }
 
 .content {
@@ -96,7 +93,7 @@ div {
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
-	z-index: 4;
+	z-index: 2;
 }
 
 .header__subtitle {
@@ -113,7 +110,7 @@ div {
 .header__link {
 	color: #2f80ed;
 	text-decoration: none;
-	z-index: 2;
+	z-index: 4;
 }
 
 .header__subtitle-link:hover {
@@ -229,7 +226,7 @@ div {
 	font-weight: 600;
 	text-align: center;
 	position: relative;
-	z-index: 3;
+	z-index: 2;
 }
 
 .feynman__subtitle {
@@ -239,7 +236,7 @@ div {
 	font-weight: normal;
 	text-align: center;
 	position: relative;
-	z-index: 2;
+	z-index: 1;
 }
 
 .feynman__link {
@@ -251,7 +248,7 @@ div {
 	position: absolute;
 		top: 50%;
 		right: 48px;
-	z-index: 1;
+	z-index: 3;
 }
 
 .feynman__img {
